# pipelinerun-jira-pullrequest

./: pyproject.toml
pjp/: __init__.py  client.py  prompts.py
tekton/: jira.yaml  prun.yaml
